Fix: Minor style issues (#145)
* fix: remove excess margin from swag tags to align with card edge

* fix: disallow horizontal scrolling caused by 'Feedback' button

On mobile devices, the feedback button on the right edge is positioned
such that it causes scrolling. This might seem like a hack-y way to do
it but it works.

--- a/site/src/styl/imports/card.styl
+++ b/site/src/styl/imports/card.styl
@@ -34,7 +34,7 @@
         color #222
 
         &.swag
-            margin 5px 0 10px 0
+            margin 5px -3px 10px -3px
 
             span
                 background #737373
